--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 bevy= "0.11.0"
+rand="0.8.5"
+reqwest = {version = "0.11.18", features = ["json"]}
 
 [profile.dev]
 opt-level = 1
